# Submap-Based-Path-Planning

./: CMakeLists.txt  README.md  doxygen.config
config/: D455_settings.yaml  config_D455_SN142422250786_evo_trial.yaml  config_DJI_ZR300_IRStereo.yaml  config_DJI_ZR300_RGB_DEPTH.yaml  config_DJI_ZR300_RGB_DEPTH_mini.yaml  config_DJI_ZR300_RGB_DEPTH_real.yaml  config_DJI_ZR300_UEYE_IRStereo.yaml  config_DJI_ZR300_UEYE_RGB_DEPTH.yaml  config_DOC1360.yaml  config_DOC1360_updated.yaml  config_DOC1360_v2.yaml  config_SN142422250786_submapping_evo_trial.yaml  config_ZR300_IRStereo.yaml  (+61 more)
okvis_ceres/: CMakeLists.txt
okvis_ceres/include/okvis/: PseudoInverse.hpp  ViGraph.hpp  ViGraphEstimator.hpp  ViSlamBackend.hpp
okvis_ceres/include/okvis/ceres/: CeresIterationCallback.hpp  ErrorInterface.hpp  GpsErrorAsynchronous.hpp  GpsErrorSynchronous.hpp  HomogeneousPointError.hpp  HomogeneousPointLocalParameterization.hpp  HomogeneousPointParameterBlock.hpp  ImuError.hpp  ParameterBlock.hpp  ParameterBlockSized.hpp  PoseError.hpp  PoseLocalParameterization.hpp  PoseParameterBlock.hpp  RelativePoseError.hpp  ReprojectionError.hpp  ReprojectionErrorBase.hpp  SpeedAndBiasError.hpp  SpeedAndBiasParameterBlock.hpp  SubmapIcpError.hpp  TwoPoseGraphError.hpp
okvis_ceres/include/okvis/ceres/implementation/: ReprojectionError.hpp
okvis_ceres/include/okvis/ceres/ode/: ode.hpp
okvis_ceres/src/: CeresIterationCallback.cpp  ErrorInterface.cpp  GpsErrorAsynchronous.cpp  GpsErrorSynchronous.cpp  HomogeneousPointError.cpp  HomogeneousPointLocalParameterization.cpp  HomogeneousPointParameterBlock.cpp  ImuError.cpp  PoseError.cpp  PoseLocalParameterization.cpp  PoseParameterBlock.cpp  RelativePoseError.cpp  SpeedAndBiasError.cpp  SpeedAndBiasParameterBlock.cpp  SubmapIcpError.cpp  TwoPoseGraphError.cpp  ViGraph.cpp  ViGraphEstimator.cpp  ViSlamBackend.cpp
okvis_ceres/test/: TestEstimator.cpp  TestEstimatorGpsError.cpp  TestGpsError.cpp  TestGpsErrorSynchronous.cpp  TestHomogeneousPointError.cpp  TestImuError.cpp  TestPoseError.cpp  TestReprojectionError.cpp  TestSubmapIcpError.cpp  test_main.cpp
okvis_common/: CMakeLists.txt
okvis_common/include/okvis/: FrameTypedefs.hpp  Measurements.hpp  Parameters.hpp  ViFrontendInterface.hpp  ViInterface.hpp  ViParametersReader.hpp
okvis_common/src/: ViInterface.cpp  ViParametersReader.cpp
okvis_cv/: CMakeLists.txt
okvis_cv/include/okvis/: Frame.hpp  MultiFrame.hpp
okvis_cv/include/okvis/cameras/: CameraBase.hpp  DistortionBase.hpp  EquidistantDistortion.hpp  EucmCamera.hpp  NCameraSystem.hpp  NoDistortion.hpp  PinholeCamera.hpp  RadialTangentialDistortion.hpp  RadialTangentialDistortion8.hpp
okvis_cv/include/okvis/cameras/implementation/: CameraBase.hpp  EquidistantDistortion.hpp  EucmCamera.hpp  NCameraSystem.hpp  PinholeCamera.hpp  RadialTangentialDistortion.hpp  RadialTangentialDistortion8.hpp
okvis_cv/include/okvis/implementation/: Frame.hpp  MultiFrame.hpp
okvis_cv/src/: CameraBase.cpp  Frame.cpp  NCameraSystem.cpp
okvis_cv/test/: TestEucmCamera.cpp  TestFrame.cpp  TestMultiFrame.cpp  TestNCameraSystem.cpp  TestPinholeCamera.cpp
okvis_frontend/: CMakeLists.txt
okvis_frontend/include/DBoW2/: FBrisk.hpp
okvis_frontend/include/okvis/: Frontend.hpp
okvis_frontend/include/okvis/triangulation/: stereo_triangulation.hpp
okvis_frontend/include/opengv/absolute_pose/: FrameNoncentralAbsoluteAdapter.hpp  LoopclosureNoncentralAbsoluteAdapter.hpp
okvis_frontend/include/opengv/relative_pose/: FrameRelativeAdapter.hpp
okvis_frontend/include/opengv/sac_problems/absolute_pose/: FrameAbsolutePoseSacProblem.hpp
okvis_frontend/include/opengv/sac_problems/relative_pose/: FrameRelativePoseSacProblem.hpp  FrameRotationOnlySacProblem.hpp
okvis_frontend/src/: FrameNoncentralAbsoluteAdapter.cpp  FrameRelativeAdapter.cpp  Frontend.cpp  LoopclosureNoncentralAbsoluteAdapter.cpp  stereo_triangulation.cpp
okvis_mapping/: CMakeLists.txt
okvis_mapping/include/okvis/: LidarMappingBackend.hpp  OusterMappingBackend.hpp  config_mapping.hpp
okvis_mapping/include/okvis/impl/: config_mapping_impl.hpp
okvis_mapping/src/: LidarMappingBackend.cpp  OusterMappingBackend.cpp
okvis_multisensor_processing/: CMakeLists.txt  okvisConfig.hpp
okvis_multisensor_processing/include/okvis/: DatasetReader.hpp  DatasetWriter.hpp  LeicaDatasetReader.hpp  QueuedTrajectory.hpp  Realsense.hpp  RealsenseRgbd.hpp  RpgDatasetReader.hpp  SubmappingInterface.hpp  ThreadedSlam.hpp  TrajectoryOutput.hpp  ViSensorBase.hpp  ViVisualizer.hpp
okvis_multisensor_processing/include/okvis/implementation/: QueuedTrajectory.hpp
okvis_multisensor_processing/include/okvis/threadsafe/: ThreadsafeQueue.hpp
okvis_multisensor_processing/src/: DatasetReader.cpp  DatasetWriter.cpp  LeicaDatasetReader.cpp  Realsense.cpp  RealsenseRgbd.cpp  RpgDatasetReader.cpp  SubmappingInterface.cpp  ThreadedSlam.cpp  TrajectoryOutput.cpp  ViVisualizer.cpp
okvis_stereo_depth/: CMakeLists.txt
okvis_stereo_depth/include/okvis/: Processor.hpp  Stereo2DepthProcessor.hpp  utils.hpp
okvis_stereo_depth/src/: Processor.cpp  Stereo2DepthProcessor.cpp
okvis_time/: CMakeLists.txt
okvis_time/include/okvis/: Time.hpp
okvis_time/include/okvis/implementation/: Time.hpp
okvis_timing/: CMakeLists.txt
okvis_timing/include/okvis/timing/: Timer.hpp
okvis_timing/src/: Timer.cpp
okvis_util/: CMakeLists.txt
okvis_util/include/okvis/: MstGraph.hpp  assert_macros.hpp  source_file_pos.hpp
supereight-2-srl-fork/app/: CMakeLists.txt
supereight-2-srl-fork/app/include/: reader_base.hpp  reader_interiornet.hpp  reader_leica.hpp  reader_newercollege.hpp  reader_openni.hpp  reader_raw.hpp  reader_realsense.hpp  reader_tum.hpp
supereight-2-srl-fork/app/src/: main.cpp  main_rayBatchInterface.cpp  main_rayInterface.cpp  main_realsense.cpp  reader.cpp  reader_base.cpp  reader_leica.cpp  reader_newercollege.cpp  reader_realsense.cpp
supereight-2-srl-fork/test/planning/: CMakeLists.txt  collision_checker_unittest.cpp  planning_unittest.cpp
supereight-2-srl-fork/test/system/multires_ofusion/: CMakeLists.txt
(+104 files in other folders)
